Bug 68684 - Numbered lists imported from .doc files that start with alpha characters are incorrectly given numeric starting characters when saved to HTML
Summary: Numbered lists imported from .doc files that start with alpha characters are ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta2 ta...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-28 21:19 UTC by d
Modified: 2014-12-03 13:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test File (26.00 KB, application/msword)
2013-08-31 11:02 UTC, Thomas van der Meulen [retired]
Details

Note You need to log in before you can comment on or make changes to this bug.
Description d 2013-08-28 21:19:58 UTC
A numbered list imported from an Microsoft Word .doc file that starts with alpha letters such as the following (obviously a plaintext simulation of a list): 

a. one
b. two
c. three

when saved to HTML by LibreOffice becomes:

1. one
2. two
3. three

This error does *not* happen when the same alpha list is imported from a .docx file.

We have seen this problem in past versions of OpenOffice and LibreOffice (Mac and PC) and still persists in LibreOffice 4.1
Comment 1 Thomas van der Meulen [retired] 2013-08-31 10:52:55 UTC
Thank you for your bug report, I can reproduce this bug running LibreOffice.
Version: 4.1.1.2
Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903 on Mac osx 10.8.4.
Comment 2 Thomas van der Meulen [retired] 2013-08-31 11:02:57 UTC
Created attachment 84965 [details]
Test File
Comment 3 d 2014-05-14 02:52:08 UTC
This "high major all platform" bug is still not even assigned after 9 months; is there a problem with the bug report, or something organizational? Thanks.
Comment 4 Björn Michaelsen 2014-10-05 00:54:03 UTC
(In reply to d from comment #3)
> This "high major all platform" bug is still not even assigned after 9
> months; is there a problem with the bug report, or something organizational?

Checking if this is a regression and if so, performing a bibisect to identify when this was introduced would certainly help moving things forward: 
https://wiki.documentfoundation.org/Bibisect
Comment 5 d 2014-10-05 01:22:18 UTC
Should I assume your Bibisect request was addressed to internal LibreOffice testers (volunteer or staff)? I read the Bibisect wiki you gave but unfortunately I'm not a developer and I don't know how to do what you are requesting. Sorry I can't be of much help beyond reporting the (verified) bug.
Comment 6 Urmas 2014-10-05 01:54:44 UTC
The same behavior occurs in OO.o 1.1.
Comment 7 d 2014-10-05 11:54:41 UTC
I just remembered (sorry!!) that I later found another list problem. Hopefully it has the same root cause.

LibreOffice also does not properly translate to HTML some unsorted list bullet characters, such as at least these two:

Black (filled in) square 
diamond/flower bullet (called that on this page: http://danshort.com/HTMLentities/index.php?w=dingb)
Comment 8 Commit Notification 2014-12-02 11:01:51 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3d913724380eb76410dc0c792e9a307bbb24ca7

fdo#68684 export more numbering types correctly into HTML

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-12-02 11:05:19 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37fd0802e73c991a7dcbb101fef9f12a045a5b42&h=libreoffice-4-4

fdo#68684 export more numbering types correctly into HTML

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-12-02 14:03:03 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5c820c4312a200847cb152bc25edc95708e6a5a&h=libreoffice-4-3

fdo#68684 export more numbering types correctly into HTML

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 d 2014-12-03 02:42:55 UTC
Andras and others,

Thanks very much for the fix... appreciated!!

Does this fix address the issues I noted (late) in my comment 7, reproduced below, or should I do another ticket?

d.

---------

I just remembered (sorry!!) that I later found another list problem. Hopefully it has the same root cause.

LibreOffice also does not properly translate to HTML some unsorted list bullet characters, such as at least these two:

Black (filled in) square 
diamond/flower bullet (called that on this page: http://danshort.com/HTMLentities/index.php?w=dingb)
Comment 12 Andras Timar 2014-12-03 08:32:23 UTC
(In reply to d from comment #11)
> Does this fix address the issues I noted (late) in my comment 7, reproduced
> below, or should I do another ticket?

It doesn't fix that. The problem is that HTML is limited in this regard. You can have <ul type="disc|circle|square> and that's all. For arbitrary bullet character you need to use CSS hacks. See e.g. http://alistapart.com/article/taminglists

Please open a new bug for this.
Comment 13 d 2014-12-03 13:12:45 UTC
Thanks for the fast reply Andras. I will check out the link you suggest and also create a new ticket.