fdo#68684 export more numbering types correctly into HTML

Change-Id: I6f1df02764f271143749ffbaeb4fc988b2f72f26
(cherry picked from commit c3d913724380eb76410dc0c792e9a307bbb24ca7)
Reviewed-on: https://gerrit.libreoffice.org/13266
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>